@@ -1,3 +1,7 @@
+2011-02-12  Torbjorn Granlund  <tege@gmplib.org>
+
+	* mpn/x86_64/atom/aorrlsh1_n.asm: New file.
+
 2011-02-11  Torbjorn Granlund  <tege@gmplib.org>
 
 	* mpn/powerpc64/mode64/mod_1_1.asm: Fix Darwin syntax issues.
